--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -1,3 +1,4 @@
+<!-- Template "inspired" from here: http://bootsnipp.com/snippets/featured/collapsible-chat-widget-->
 <!DOCTYPE html>
 <html>
 <head><title></title>
